# home-assistant-datasets

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  .yaml-lint.yaml  AGENTS.md  README.md  models.yaml  models_example.yaml  pyproject.toml  pyproject.toml.rej  pytest.ini  report.csv  requirements.txt  requirements_dev.txt  requirements_eval.txt
.devcontainer/: devcontainer.json  setup
.github/: renovate.json5  renovate.json5.rej
.github/ISSUE_TEMPLATE/: benchmark-run.yml
.github/workflows/: benchmarks-from-issue.yaml  cruft.yaml  lint.yaml  pages.yaml  publish.yaml  test.yaml
agents/dataset/: AGENTS.md
agents/inference/: AGENTS.md
agents/ontology/: AGENTS.md
agents/state/: AGENTS.md
agents/tools/: AGENTS.md
agents/training/: AGENTS.md  (+1 more)
annotations/: README.md
datasets/: README.md  actions.yaml  area-devices.yaml  device-entities.yaml  homes.yaml
docs/: eval.md
evals/: conftest.py  test_area_summary_eval.py
generation/: README.md  anomalies.ipynb  areas.ipynb  device-actions-collect.ipynb  device-actions-fixtures.ipynb  device-actions.ipynb  devices.ipynb  homes.ipynb  summaries.ipynb
home_assistant_datasets/: __init__.py  blueprint.py  data_model.py  fixtures.py  hass_data.py  model_client.py  models.py  pytest_agent.py  pytest_data_loader.py  pytest_dataset.py  scrape.py  secrets.py  yaml_loaders.py
metrics/: README.md  metrics.py  offline_eval_metrics.py
model_evals/: README.md  __init__.py  common.py  conftest.py  test_anomaly_eval.py  test_area_summary_agent_eval.py  test_area_summary_eval.py  test_device_actions_eval.py
models/: README.md  assist-llm.yaml  assistant.yaml  claude-3-5-haiku.yaml  claude-3-5-sonnet.yaml  claude-3-7-sonnet.yaml  claude-3-haiku.yaml  devstral-2512.yaml  functionary-small-v2.5.yaml  gemini-1.5-flash.yaml  gemini-2.0-flash-lite.yaml  gemini-2.0-flash.yaml  gemini-2.0-pro.yaml  gemini-2.5-flash-lite.yaml  gemini-2.5-flash.yaml  gemini-2.5-pro.yaml  gemini-3.1-flash-lite.yaml  gemini-pro.yaml  gemma-3-27b-it.yaml  gemma.yaml  gemma3-12b.yaml  gemma3-27b.yaml  gemma3-4b.yaml  gemma4-12b.yaml  gemma4-26b-a4b.yaml  gemma4-e2b.yaml  gemma4-e4b.yaml  glm-4.7-flash.yaml  gpt-3.5.yaml  gpt-4.1-mini.yaml  gpt-4.1-nano.yaml  gpt-4.1.yaml  gpt-4o-mini.yaml  gpt-4o.yaml  gpt-o4-mini.yaml  gpt-oss-120b.yaml  gpt-oss-20b.yaml  granite3.3-2b.yaml  granite3.3-8b.yaml  home-llm.yaml  (+42 more)
notebooks/: analytics-distributions.ipynb  area-summary.ipynb  hass-client.ipynb  hass_data.py  model_client.py  secrets.py  synthetic-actions.ipynb  synthetic-area-devices.ipynb  synthetic-device-entities.ipynb  synthetic-devices.ipynb  synthetic-home.ipynb
reports/: CHAGELOG.md  README.md  leaderboard.md
script/: README.md  benchmark  bootstrap  eval_collect_all_datasets.sh  eval_collect_assist.sh  eval_collect_automations.sh  eval_metrics_all_datasets.sh  eval_metrics_assist.sh  eval_metrics_automations.sh  export.py  human_eval_metrics.py  import.py  offline_eval_metrics.py  openrouter_fetch_model.py  run-mypy.sh
tests/: __init__.py  conftest.py  test_areas.py  test_assist.py  test_assist_mini.py  test_automations.py  test_blueprint.py  test_data_model.py  test_device_actions.py  test_devices.py  test_eval_tasks.py  test_models.py  test_pytest_agent.py
train/: README.md  llama31_unsloth.ipynb
(+83833 files in other folders)
