[build-system]
requires = ["setuptools >= 67.6.1"]
build-backend = "setuptools.build_meta"

[project]
name = "home_assistant_datasets"
description = "Library and tools for building datasets related to Home Assistant."
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "PyYAML>=6.0.1",
    "mashumaro>=3.13",
    "openai>=1.10.0",
    "google-generativeai>=0.5.4",
]
requires-python = ">= 3.11"
authors = [{ name = "Allen Porter", email = "allen.porter@gmail.com" }]

[tool.setuptools.packages.find]
include = ["home_assistant_datasets"]

[project.urls]
Repository = "https://github.com/allenporter/home-assistant-datasets.git"

[project.scripts]
collect-area-data = "home_assistant_datasets.tools.collect_area_data:main"
home-assistant-datasets = "home_assistant_datasets.tool.__main__:main"
