[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "home_assistant_datasets"
description = "Library and tools for building datasets related to Home Assistant."
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "PyYAML>=6.0.1",
    "mashumaro>=3.13",
    "openai>=1.10.0",
    "google-generativeai>=0.5.4",
    "hass-client>=1.2.0",
    "synthetic_home>=4.3.1",
    "hass-client>=1.2.0",
]
requires-python = ">= 3.12"
authors = [{ name = "Allen Porter", email = "allen.porter@gmail.com" }]

[tool.setuptools.packages.find]
include = ["home_assistant_datasets"]

[project.urls]
Repository = "https://github.com/allenporter/home-assistant-datasets.git"

[project.scripts]
collect-area-data = "home_assistant_datasets.tools.collect_area_data:main"
home-assistant-datasets = "home_assistant_datasets.tool.__main__:main"

[tool.mypy]
exclude = [
    "setup\\.py",
    "^venv",
    "^.venv",
    "^custom_components/",
    "^datasets",
    "^reports",
    "^docs",
    "^models",
    "^script",
]
platform = "linux"
show_error_codes = true
follow_imports = "normal"
local_partial_types = true
strict_equality = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = false
disable_error_code = ["import-untyped", "var-annotated", "import-not-found"]
extra_checks = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true
